# PiebaldMPI

./: DESCRIPTION  Makefile  NAMESPACE  configure  configure.ac
R/: Rinterface.R  init_finalize.R  lapply_helpers.R  zzz.R
src/: Makevars.in  Rinterface.c  backend.c  commands.h  compiler_directives.h  getrank.c  getrank.h  init_finalize.c  init_finalize.h  lapply.c  lapply.h  lapply_helpers.c  lapply_helpers.h  lapply_workers.c  lapply_workers.h  lapply_workers_helpers.c  lapply_workers_helpers.h  state.h
testsuite/: test.R  unitTestUtilities.R
